--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,32 @@ body {
     font-family: arial,sans-serif;
     color: #202124;
     width: 1000px;
-    min-width: 400px;
+    min-width: 500px;
 }
 
+.grid {
+    display: grid;
+    padding: 50px;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    grid-template-columns: 250px 300px auto;
+    
+}
 
+.grid-item {
+    font-size: 20px;
+    padding: 2px;
+    text-align: left;
+}
 
-
-
+.item-end {
+    text-align: right;
+}
 
 
 
 /* HERFRA SKAL FJERNES */
 
-/* body, input, button {
-    font-size: 14px;
-    font-family: arial,sans-serif;
-    color: #202124;
-} */
 
 .top {
     text-align: right;
@@ -60,10 +69,6 @@ body {
     text-align: center;
 }
 
-.white {
-    width: 25px;
-}
-
 .jfk-button {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -85,81 +90,11 @@ body {
     -moz-box-shadow: none;
     box-shadow: none;
     background-color: #4d90fe;
-    background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
+    /* background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
     background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
     background-image: -ms-linear-gradient(top,#4d90fe,#4787ed);
     background-image: -o-linear-gradient(top,#4d90fe,#4787ed);
-    background-image: linear-gradient(top,#4d90fe,#4787ed);
+    background-image: linear-gradient(top,#4d90fe,#4787ed); */
     border: 1px solid #3079ed;
     color: #fff;
-}
-
-div.otByu {
-    width: 100%;
-    clear: both;
-}
-
-div.lOTAE {
-    height: 30px;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-div.otByu div.I1Kbt, div.lFApYd {
-    float: left;
-    display: inline-block;
-    min-width: 167px;
-    width: 16%;
-    font-size: 16px;
-    min-height: 42px;
-    font-weight: 500;
-    color: #333;
-    vertical-align: middle;
-}
-
-div.otByu div.HoCfzc {
-    float: left;
-    display: inline-block;
-    min-width: 167px;
-    min-height: 41px;
-    vertical-align: middle;
-    width: 50%;
-}
-
-div.otByu div.orcpGe {
-    float: left;
-    display: inline-block;
-    width: 33%;
-    font-size: 13px;
-    font-weight: 700;
-    color: #777;
-    padding-left: 5px;
-    vertical-align: middle;
-}
-
-div.otByu div.FAcADc {
-    float: left;
-    display: inline-block;
-    min-width: 167px;
-    width: 16%;
-    height: 42px;
-    color: #222;
-    font-size: 13px;
-    line-height: 16px;
-    vertical-align: middle;
-}
-div.otByu div.jYcx0e {
-    float: left;
-    display: inline-block;
-    min-width: 167px;
-    min-height: 41px;
-    vertical-align: middle;
-    width: 50%;
-}
-
-div.Mza7yc {
-    max-width: 1140px;
-    min-width: 200px;
-    width: 96%;
-    margin: 40px 2% 0 45px;
 }
